--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.1.2",
+    "chart.js": "^3.9.1",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "18.8.4",
+    "@types/react": "18.0.21",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1"
   }
