--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.9.2",
+    "@prisma/client": "^3.15.2",
     "axios": "^1.1.2",
     "chart.js": "^3.9.1",
     "next": "12.3.1",
@@ -20,6 +22,7 @@
     "@types/node": "18.8.4",
     "@types/react": "18.0.21",
     "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "prisma": "^3.15.2"
   }
 }
