--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.9.2",
     "@prisma/client": "^3.15.2",
+    "@stripe/stripe-js": "^1.41.0",
     "axios": "^1.1.2",
     "chart.js": "^3.9.1",
+    "micro-cors": "^0.1.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "stripe": "^10.14.0"
   },
   "devDependencies": {
     "@types/node": "18.8.4",
