--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
   "devDependencies": {
     "@types/node": "18.8.4",
     "@types/react": "18.0.21",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
-    "prisma": "^3.15.2"
+    "postcss": "^8.4.18",
+    "prisma": "^3.15.2",
+    "tailwindcss": "^3.1.8"
   }
 }
